<resources>
    <string name="app_name">advancedView</string>
    <string name="welcome">웰컴</string>
    <string name="getdata">문자열 가져오기</string>
    <string name="setdata">문자열 셋팅하기</string>
    <string name="submit">전송</string>
    <string name="signup">회원가입</string>
    <string name="signin">로그인</string>
    <string name="detail">상세정보</string>
    <string name="name">name</string>
    <string name="id">id</string>
    <string name="pass">password</string>
    <string name="button">BUTTON</string>

</resources>
