<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frame_test"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFFF00"
        >
        <Button
            android:id="@+id/btnsignin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/signin"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/btnsignup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/signup"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/btndetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/detail"
            android:layout_margin="5dp"
            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/layoutsignin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:background="#19A574"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
             />
            <EditText
                android:id="@+id/txtSigninId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                />
            <EditText
                android:id="@+id/txtSigninPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                />
            <Button
                android:id="@+id/btnsigninsubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutsignup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:background="#19A574"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                />
            <EditText
                android:id="@+id/txtSignupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                />
            <EditText
                android:id="@+id/txtSignupId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                />
            <EditText
                android:id="@+id/txtSignupPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                />
            <Button
                android:id="@+id/btnsignupsubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button"/>

            <LinearLayout
                android:id="@+id/signupdetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible">
                <TextView
                    android:id="@+id/txtSigninNameResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                <TextView
                    android:id="@+id/txtSigninIdResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                <TextView
                    android:id="@+id/txtSigninPassResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutdetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:background="#19A574"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                />
            <ImageView
                android:id="@+id/imageDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/memimg"
                />
            <TextView
                android:id="@+id/txtDetailName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="이선균"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>